--- a/CSS/index.css
+++ b/CSS/index.css
@@ -173,7 +173,7 @@ a{
 /* Hero section */
 .hero{
 
-    background: url(/images/background-img.jpeg);
+    background: url(/images/empty\ job\ background.avif);
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
