--- a/CSS/index.css
+++ b/CSS/index.css
@@ -127,7 +127,7 @@ a{
         right: -100%;
         width: 270px;
         height: 38vh;
-        background-color: #3A80D4;
+        background-color: grey;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
