--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,14 +1,14 @@
 
 
 footer {
-  background-color: #0052B4;
+  background-color: rgb(221, 202, 189);
   font-family: "DM Sans";
   padding: 4%;
-  color: white;
+  color: black;
 }
 
 footer a{
-  color: white;
+  color: black;
   text-decoration: none;
 }
 
@@ -44,7 +44,7 @@ footer a:hover{
 }
 
 .form-box {
-   background-color: white;
+   background-color: rgb(237, 213, 196);
   padding: 2%;
   width: 50%;
 }
@@ -60,14 +60,14 @@ textarea {
   width: 80%; 
   padding: 3%;
   margin-bottom: 2vh; 
-  border: 1px solid #aecff5; 
+  border: 1px solid chocolate transparent; 
   border-radius: 4px; 
 }
 
 input[type="submit"] {
   width: 80%;
-  background-color: #0052B4; 
-  color: white; 
+  background-color: chocolate; 
+  color: black; 
   padding: 10px 20px;
   border: none; 
   border-radius: 4px; 
@@ -75,7 +75,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #0c3b75;
+  background-color: rgb(240, 231, 224);
   text-decoration: underline; 
 }
 
@@ -113,7 +113,7 @@ input[type="submit"]:hover {
     }
     
     .form-box {
-       background-color: white;
+       background-color: black;
       padding: 2%;
       width: 100%;
     }
