--- a/CSS/index.css
+++ b/CSS/index.css
@@ -16,7 +16,7 @@ body{
 
 header{
     position: relative;
-    /* background-color: #3A80D4;
+    /* background-color: chocolate;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,7 +43,7 @@ nav{
     left: 0;
     right: 0;
     bottom: 90%;
-    background-color: #3A80D4;
+    background-color: rgb(221, 208, 189);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -63,12 +63,12 @@ nav a{
 }
 
 nav a:hover{
-    color: #F0F41D;
+    color: chocolate;
 }
 
 a{
     text-decoration: none;
-    color: white;
+    color: black;
 }
 /* login buttons */
 .buttons{
@@ -81,7 +81,7 @@ a{
 
 .login{
     padding: 5px 25px;
-    border: 2px solid white;
+    border: 2px solid black;
     border-radius: 1rem;
     font-size: 18px;
     transition: 0.3s ease;
@@ -94,8 +94,8 @@ a{
 
 .signup{
     padding: 5px 20px;
-    background-color: white;
-    color: #3A80D4;
+    background-color: black;
+    color: chocolate;
     border-radius: 1rem;
     font-size: 18px;
     transition: 0.3s ease;
@@ -104,12 +104,12 @@ a{
 
 .signup:hover{
     background-color: #F0F41D;
-    color: #3A80D4;
+    color: chocolate;
 }
 
 #menu-icon{
     font-size: 29px;
-    color: white;
+    color: black;
     cursor: pointer;
     z-index: 10001;
     display: none;
@@ -173,7 +173,7 @@ a{
 /* Hero section */
 .hero{
 
-    background: url(/images/empty\ job\ background.avif);
+    background: url(https://cdn.phenompeople.com/CareerConnectResources/pp/CEAMUS/images/home-hero-1701195382013.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
@@ -186,7 +186,7 @@ a{
 }
 
 .hero_cont{
-    color: white;
+    color: black;
     display: flex;
     flex-direction: column;
     gap: 80px;
@@ -198,7 +198,7 @@ a{
 }
 
 .hero_cont .smart_yl{
-    color: #F0F41D;
+    color: chocolate;
 }
 
 .hero_cont .big_l{
@@ -222,21 +222,21 @@ a{
 }
 
 .hero_buttons .blue{
-    background-color: #034089;
+    background-color: rgb(241, 216, 198);
     padding: 10px 25px;
-    color: #F0F41D;
+    color: black;
     font-weight: 700;
     border-radius: 7px;
     transition: 0.3s ease;
 }
 
 .hero_buttons .blue:hover{
-    background-color: #3A80D4;
+    background-color: white;
 }
 .hero_buttons .yellow{
-    background-color: #F0F41D;
+    background-color:white;
     padding: 10px 25px;
-    color: #0052B4;
+    color: black;
     font-weight: 700;
     border-radius: 7px;
     transition: 0.3s ease;
@@ -244,8 +244,8 @@ a{
 
 .hero_buttons .yellow:hover{
     background-color: transparent;
-    border: 4px solid #F0F41D;
-    color: #F0F41D;
+    border: 4px solid chocolate;
+    color: chocolate;
 }
 
 /* About us section */
