--- a/CSS/login.css
+++ b/CSS/login.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: chocolate;
+  background-color: rgb(233, 207, 189);
 }
 
 .login-container {
@@ -33,13 +33,13 @@ input {
   box-sizing: border-box;
   margin-top: 5px;
   margin-bottom: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid rgb(225, 207, 194);
   border-radius: 4px;
 }
 
 input[type="submit"] {
-  background-color:#FFDF00;
-  color:  chocolate;
+  background-color:chocolate;
+  color: black;
   cursor: pointer;
 }
 
@@ -47,15 +47,15 @@ input[type="submit"]:hover {
   background-color:yellowF0F41D;
 }
 h6 {
-  color: white; 
+  color:black; 
   font-size: 20px;
   margin-top: 10px;
 }
 
 a {
-  color: #FFDF00;
+  color: chocolate;
   text-decoration: none;
 }
 h1, form {
-color: white;
+color: black;
 }
