--- a/Pages/job.css
+++ b/Pages/job.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: rgb(237, 219, 207);
 }
 
 .container {
@@ -11,11 +11,11 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color:chocolate;
+    color:black;
     padding-top: 30px;
     min-height: 70px;
-    border-bottom: #77b5fe 3px solid;
+    /* border-bottom: #77b5fe 3px solid; */
 }
 
 header h1 {
@@ -36,7 +36,7 @@ header h1 {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: rgb(237, 219, 207);
 }
 
 .job h2 {
@@ -46,13 +46,13 @@ header h1 {
 .apply-btn {
     display: inline-block;
     padding: 10px 15px;
-    background-color: #333;
-    color: #fff;
+    background-color: rgb(237, 219, 207);
+    color: black;
     text-decoration: none;
     border-radius: 5px;
     margin-top: 10px;
 }
 
 .apply-btn:hover {
-    background-color: #77b5fe;
+    background-color: white;
 }
